import grpc
from concurrent import futures
import time

# Note: En production, ces fichiers seraient générés via grpcio-tools
# import modules_pb2
# import modules_pb2_grpc

class QuantumMapperService:
    def ExecuteTask(self, request, context):
        print(f"Exécution de la tâche : {request.task_id}")
        return {"task_id": request.task_id, "status": "Completed", "output": "Analyse sémantique terminée"}

    def GetHealth(self, request, context):
        return {"healthy": True, "message": "QuantumMapper est opérationnel"}

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    # modules_pb2_grpc.add_SecurityModuleServicer_to_server(QuantumMapperService(), server)
    server.add_insecure_port('[::]:50053')
    print("Module QuantumMapper démarré sur le port 50053")
    server.start()
    try:
        while True:
            time.sleep(86400)
    except KeyboardInterrupt:
        server.stop(0)

if __name__ == '__main__':
    serve()
